--- a/Style.css
+++ b/Style.css
@@ -1,26 +1,46 @@
+body{
+    background-image: url(images/background.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .Head-container{
     font-family: 'Heebo', sans-serif;
     font-size: x-large;
-    display: flex;
-    justify-content: space-between;
-    align-items:flex-end;
+    display: grid;
+    grid-template-columns: auto auto;
 }
 
 img{
-    width: auto;
-    height:27rem;
+    width: 35rem;
+    height:auto;
 }
 .Head-item1{
-    width: 40%;
+    grid-column-start: 1;
+    grid-column-end: 6;
     margin-left: 10%;
-    height: 27rem;
+    padding: 5% 0%;
+    margin-right: 20%;
 }
+
+.Head-item2{
+    grid-column-start: 6;
+    grid-column-end: 12;
+    margin-right: 90px;
+}
+
 .Head-item1 p{
     font-size: medium;
 }
 
-.Head-item2{
-    width: 20vw;
-    margin-right: 20%;
+.Link-Button{
+    background-image:linear-gradient(45deg,rgb(248, 206, 123),rgb(245, 186, 78),rgb(241, 162, 14));
+    font-size: medium;
+    text-decoration: none;
+    font-weight: 700;
+    padding: 6px 6px;
+    border-radius: 5px;
 }
+
+
 
